Update main container width to avoid frequent overflow

--- a/theRoofIsOnFire/static/allpages_of_the_roof.css
+++ b/theRoofIsOnFire/static/allpages_of_the_roof.css
@@ -19,7 +19,7 @@ body {
 
 
 #whole_page_container {
-    width: 50%;
+    width: 75%;
     min-height: 100%;
     margin: auto;
     font-size: 1em;
